--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,19 +5,22 @@ on:
     branches:
       - master
       - 'releases/*'
+  schedule:
+    # Run the CI automatically every hour to look for flakyness.
+    - cron:  '0 * * * *'
+
+env:
+  CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
 jobs:
   build_and_test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
+    container:
+      image: ubuntu:bionic
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v1
-      - name: Setup Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
-      - name: Run build and tests
-        run: |
-          npm ci
-          npm run build
-          npm run test
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+    - run: .github/workflows/build-and-test.sh
+      shell: bash  # Ensure bash is used on Windows platform too
