--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,11 @@ jobs:
       with:
         node-version: '12.x'
     - run: .github/workflows/build-and-test.sh
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+    - uses: ./  # Uses an action in the root directory
