--- a/action.yml
+++ b/action.yml
@@ -1,15 +1,34 @@
-name: 'cw-build-status'
-description: 'Send build status metrics to CloudWatch'
+name: 'Post Amazon Cloudwatch Metrics'
+description: 'Publishes a metric to Amazon CloudWatch.'
+author: 'ROS Tooling Working Group'
+branding:
+  icon: 'upload-cloud'
+  color: 'gray-dark'
 inputs:
-  project-name:
-    description: 'Name of the project'
-    default: ${{ github.repository }}
+  metric-name:
+    description: 'Name of the metric to be published'
+    default: 'Builds'
+
+  metric-value:
+    description: >-
+      Value of the metric to be published
+
+      true, and false are respectfully converted to 1.0, and 0.0 automatically
+    default: "${{ job.status == 'success' }}"
+
+  metric-dimensions:
+    description: 'Dimension of the metric to be published, as a JSON object'
+    default: >-
+      [
+        { "Name": "github.event_name", "Value": "${{ github.event_name }}" },
+        { "Name": "github.ref", "Value": "${{ github.ref }}" },
+        { "Name": "github.repository", "Value": "${{ github.repository }}" }
+      ]
+
   namespace:
-    description: 'Namespace the metrics will be logged under'
-    default: 'GithubCI'
-  status:
-    description: 'Status of the build [success|failure]'
-    required: true
+    description: 'The namespace for the metric data.'
+    default: 'CwBuildStatus'
+
 runs:
   using: 'node12'
   main: 'dist/index.js'
