--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,16 @@ jobs:
       with:
         node-version: '12.x'
     - run: .github/workflows/build-and-test.sh
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+    - run: ./github/workflows/generate-metrics-file.sh
+    - uses: ros-tooling/action-cloudwatch-metrics@0.0.4
+      with:
+        metric-data: metrics.json
 
   log_workflow_status_to_cloudwatch:
     runs-on: ubuntu-latest
