--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,12 @@ jobs:
       with:
         node-version: '12.x'
     - run: .github/workflows/build-and-test.sh
+
+  test_metrics_file_input:
+    runs-on: ubuntu-latest
+    container:
+      image: ubuntu:bionic
+    if: ${{ ! github.event.repository.fork && ! github.event.pull_request.head.repo.fork }}
     # Run with a valid metrics JSON file just to make sure that it doesn't crash when doing so
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
