--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
     container:
       image: ubuntu:bionic
     if: ${{ ! github.event.repository.fork && ! github.event.pull_request.head.repo.fork }}
+    steps:
     # Run with a valid metrics JSON file just to make sure that it doesn't crash when doing so
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
