--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,10 @@ jobs:
     if: ${{ ! github.event.repository.fork && ! github.event.pull_request.head.repo.fork }}
     steps:
     # Run with a valid metrics JSON file just to make sure that it doesn't crash when doing so
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
